--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
 
 <head>
     <meta charset="utf-8">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-2X6LYYNLEF"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-2X6LYYNLEF');
-</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
+    <meta property="og:image" content="https://shop.rajm.com.np/assets/img/unnamed (14).png">
+    <meta name="description" content="Buy PUBGM-UC at lowest price. 
+UCSHOP INITLNEPAL | BUY UC, Diamonds, Games and more | www.rajm.com.np
+
+Pay by eSewa, Khalti, Bank transfer, bankCards.
+">
+    <meta property="og:type" content="website">
+    <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "Buy PUBG UC AND GIFTCARDS",
+            "url": "https://shop.rajm.com.np"
+        }
+    </script>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.reflowhq.com/v2/toolkit.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900&amp;display=swap">
