--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-2X6LYYNLEF');
 </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
+    <title>Home - UC-SHOP</title>
     <meta property="og:image" content="https://shop.rajm.com.np/assets/img/unnamed (14).png">
     <meta name="description" content="Buy PUBGM-UC at lowest price. 
 UCSHOP INITLNEPAL | BUY UC, Diamonds, Games and more | www.rajm.com.np
