--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ Pay by eSewa, Khalti, Bank transfer, bankCards.
         <div class="bg-circle-4 bg-circle"></div>
     </header>
     <section>
-        <div class="container">
+        <div class="container"><script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="13d2981f-f87b-45ed-841b-59cd3d399569";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+
             <div data-reflow-type="user-orders"></div>
             <div class="line-with-icon-divider"><span id="line-span" class="line-span"><i class="fa fa-opencart" aria-hidden="true" style="font-size: 28px;color: #000000;"></i></span></div>
         </div>
